//file:noinspection GradlePackageUpdate
plugins {
    id 'org.springframework.boot' version '4.0.5'
    id 'io.freefair.lombok' version '9.2.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

repositories {
    mavenCentral()
}

ext {
    cehComponentsVersion = '1.0.51'
    jenaVersion = '6.0.0'
    solrVersion = '10.0.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_23
}

bootJar {
    archiveFileName = 'app.jar'
}

compileJava {
    options.compilerArgs += ['-Xlint:deprecation', '-parameters']
    options.incremental = true
}

dependencies {
    // Spring Boot starters
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework:spring-jdbc'

    // Spring Security
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'

    // Apache
    implementation "org.apache.jena:apache-jena-libs:${jenaVersion}"
    implementation "org.apache.jena:jena-geosparql:${jenaVersion}"
    implementation "org.apache.solr:solr-solrj:${solrVersion}"

    // CEH Components
    implementation "uk.ac.ceh.components:datastore-git:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:springsecurity-userstore:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:userstore-crowd:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:userstore-inmemory:${cehComponentsVersion}"

    // Third-party
    implementation 'tools.jackson.datatype:jackson-datatype-guava'
    implementation 'com.google.guava:guava:33.4.8-jre'
    implementation 'com.jayway.jsonpath:json-path'
    implementation 'com.nimbusds:nimbus-jose-jwt:10.9'
    implementation 'com.opencsv:opencsv:5.12.0'
    implementation 'com.vividsolutions:jts:1.13'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'org.ehcache:ehcache'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.xerial:sqlite-jdbc'
    implementation 'org.yaml:snakeyaml:2.6'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.xmlunit:xmlunit-core'
    testImplementation 'org.xmlunit:xmlunit-matchers'
}

configurations.configureEach {
    resolutionStrategy.eachDependency { details ->
        if (details.requested.group == 'org.apache.commons' && details.requested.name == 'commons-lang3') {
            details.useVersion '3.19.0'
            details.because 'Jena 5.6.0 requires BasicThreadFactory.builder() added in 3.19.0'
        }
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "skipped", "failed"
    }
}
